force-app/main/default/objects/Additional_Leave__c/Additional_Leave__c.object-meta.xml
<CustomObject>
    <label>Additional Leave</label>
    <nameField>
        <displayFormat>ADL-{0000000}</displayFormat>
        <label>Additional Leave No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>