force-app/main/default/objects/Additional_Leave__c/fields/Leave_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Leave_Entitlement__c</fullName>
    <label>Leave Entitlement</label>
    <referenceTo>Leave_Entitlement__c</referenceTo>
    <relationshipName>Rostering_Additional_Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>