force-app/main/default/objects/Additional_Leave__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <label>No of Days</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>