force-app/main/default/objects/Additional_Leave__c/fields/PayItem__c.field-meta.xml
<CustomField>
    <fullName>PayItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PayItem</label>
    <referenceTo>PayItem__c</referenceTo>
    <relationshipLabel>Additional Leaves</relationshipLabel>
    <relationshipName>Additional_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>