force-app/main/default/objects/Additional_Leave__c/fields/Rostering__c.field-meta.xml
<CustomField>
    <fullName>Rostering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rostering</label>
    <referenceTo>Rostering__c</referenceTo>
    <relationshipLabel>Additional Leaves</relationshipLabel>
    <relationshipName>Additional_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>